boreal-daemon/tree-sitter-boreal/test/corpus/import_statement.txt
================================================================================
Import statement
================================================================================

module E where

import Lol

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name))
  (top_level_declarations
    (import_declaration
      (module_name))))
