boreal-daemon/tree-sitter-boreal/test/corpus/qualified_module.txt
================================================================================
Qualified Module
================================================================================

module Stdlib.Prelude where

let x = 3

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name))
  (top_level_declarations
    (function_declaration
      (function_head
        (identifier)
        (identifier))
      (function_body
        (simple_expression
          (identifier))))))
