boreal-daemon/tree-sitter-boreal/test/corpus/sum_type.txt
================================================================================
Sum type
================================================================================

module Expressions where

type Bool = True | False

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name))
  (top_level_declarations
    (datatype_declaration
      (datatype_head
        (constructor))
      (sumtype_body
        (constructor)
        (constructor)))))
